Fixed USRegistration styling

--- a/Extension/USRegistration/Resources/StyleSheets/USRegistrationStyle.qss
+++ b/Extension/USRegistration/Resources/StyleSheets/USRegistrationStyle.qss
@@ -46,7 +46,7 @@ QGroupBox:QLabel {
 
 QPushButton#referenceVisButton,
 QPushButton#probeVisButton,
-QPushButton#toolVisButton {
+QPushButton#stylusVisButton {
     background-color: #3c3948;
 }
 
