ENH: Added more UI and made horizontal lines in Capture & Identify Surface more visible

--- a/extensions/USRegistration/Resources/StyleSheets/USRegistrationStyle.qss
+++ b/extensions/USRegistration/Resources/StyleSheets/USRegistrationStyle.qss
@@ -86,3 +86,10 @@ QDialog {
     background-color: #3c3948;
     border-color: #3c3948;
 }
+
+QFrame[frameShape="4"] {
+    border-width: 2px;
+    border-color: white;
+    border-style: solid;
+    color: white;
+}
