--- a/extensions/USRegistration/Resources/UI/USRegistration.ui
+++ b/extensions/USRegistration/Resources/UI/USRegistration.ui
@@ -178,7 +178,80 @@
       <string>Capture &amp;&amp; Identify Surface</string>
      </property>
      <layout class="QGridLayout" name="gridLayout_5">
-      <item row="7" column="1" colspan="2">
+      <item row="0" column="0" colspan="3">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Record Sequence:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="0" colspan="3">
+       <widget class="Line" name="line_2">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
+      <item row="13" column="1" colspan="2">
+       <widget class="qMRMLNodeComboBox" name="outputMarkupsComboBox"/>
+      </item>
+      <item row="6" column="0" colspan="3">
+       <widget class="QPushButton" name="loadTFModelButton">
+        <property name="text">
+         <string>Load TensorFlow Model</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0" colspan="3">
+       <widget class="QPushButton" name="deleteSeqButton">
+        <property name="text">
+         <string>Delete Sequence &amp;&amp; Reset</string>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="0" colspan="3">
+       <widget class="QLabel" name="label_3">
+        <property name="text">
+         <string>Surface Recognition:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0" colspan="3">
+       <widget class="QPushButton" name="startStopRecButton">
+        <property name="text">
+         <string>Start Recording</string>
+        </property>
+       </widget>
+      </item>
+      <item row="13" column="0">
+       <widget class="QLabel" name="label_6">
+        <property name="text">
+         <string>Output Markups:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0" colspan="3">
+       <widget class="QPushButton" name="pauseRecButton">
+        <property name="text">
+         <string>Pause Recording</string>
+        </property>
+       </widget>
+      </item>
+      <item row="10" column="0" colspan="2">
+       <widget class="Line" name="line">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="0" colspan="2">
+       <widget class="QPushButton" name="pushButton">
+        <property name="text">
+         <string>Compute Bone Surfaces</string>
+        </property>
+       </widget>
+      </item>
+      <item row="12" column="1">
        <widget class="ctkDoubleSpinBox" name="interPointDistSpinBox">
         <property name="minimum">
          <double>1.000000000000000</double>
@@ -195,76 +268,31 @@
         </property>
        </widget>
       </item>
-      <item row="7" column="0">
-       <widget class="QLabel" name="label_4">
+      <item row="11" column="0" colspan="2">
+       <widget class="QLabel" name="label_8">
         <property name="text">
-         <string>Min Inter-Point Distance:</string>
+         <string>Generate Points:</string>
         </property>
        </widget>
       </item>
-      <item row="10" column="1" colspan="2">
-       <widget class="qMRMLNodeComboBox" name="outputMarkupsComboBox"/>
-      </item>
-      <item row="0" column="0" colspan="3">
-       <widget class="QLabel" name="label">
-        <property name="text">
-         <string>Record Sequence:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="0" colspan="3">
-       <widget class="Line" name="line_2">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-       </widget>
-      </item>
-      <item row="8" column="2">
+      <item row="8" column="1">
        <widget class="ctkDoubleSlider" name="segThresSlider">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
        </widget>
       </item>
-      <item row="5" column="0" colspan="3">
-       <widget class="QLabel" name="label_3">
+      <item row="12" column="0">
+       <widget class="QLabel" name="label_4">
         <property name="text">
-         <string>Surface Recognition:</string>
+         <string>Min Inter-Point Distance:</string>
         </property>
        </widget>
       </item>
-      <item row="6" column="0" colspan="3">
-       <widget class="QPushButton" name="loadTFModelButton">
+      <item row="14" column="0" colspan="2">
+       <widget class="QPushButton" name="pushButton_2">
         <property name="text">
-         <string>Load TensorFlow Model</string>
-        </property>
-       </widget>
-      </item>
-      <item row="10" column="0">
-       <widget class="QLabel" name="label_6">
-        <property name="text">
-         <string>Output Markups:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="0" colspan="3">
-       <widget class="QPushButton" name="startStopRecButton">
-        <property name="text">
-         <string>Start Recording</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="0" colspan="3">
-       <widget class="QPushButton" name="deleteSeqButton">
-        <property name="text">
-         <string>Delete Sequence &amp;&amp; Reset</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0" colspan="3">
-       <widget class="QPushButton" name="pauseRecButton">
-        <property name="text">
-         <string>Pause Recording</string>
+         <string>Compute Point Set</string>
         </property>
        </widget>
       </item>
